fix display on mobile

--- a/index.css
+++ b/index.css
@@ -71,7 +71,7 @@ ul {
 }
 
 
-@media screen and (min-width: 900px) {
+@media only screen and (min-width: 992px) {
     main {
         display: grid;
         grid-template-columns: 365px 1fr 1fr;  
